@@ -102,6 +102,12 @@
     <contributor>
       <name>Antranig Basman</name>
     </contributor>
+    <contributor>
+      <name>Armin Waibel</name>
+      <id>arminw</id>
+      <email>arminw@apache.org</email>
+      <timezone>+1</timezone>
+    </contributor>
   </contributors>
 
 
