@@ -57,10 +57,18 @@ MINOR INCOMPATIBILITIES TO 1.0
 -----------------------------------------
 
 - PessimisticMapWrapper now throws the more general LockException from locking package
+- Both MultiLevelLock#release and LockManager2#release now return a boolean that indicates if the lock
+  really has been released
 
 BUGFIXES FROM 1.0 beta1
 -----------------------
 - Fixed deadlock hazard in deadlock detection caused by interleaving access to locks set of an owner
+- Fixed timeout that in certain scenarios did not work
+- GenericLock test method released all locks held by the testing owner - fixed
+
+ENHANCEMENTS FROM 1.0 beta1
+-----------------------
+- Many extensions for information about locks
 
 KNOWN ISSUES
 ------------
